--- a/calculator/rust-counter/index.html
+++ b/calculator/rust-counter/index.html
@@ -2,7 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Rust Calculator</title>
+    <title>Rust Counter</title>
     <link data-trunk rel="sass" href="index.scss" />
+    <link data-trunk rel="copy-dir" href="img">
   </head>
+
+
+
+  
+
 </html>
